fix(GSAP) Fixed animations not working on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@ body {
   overflow-x: hidden;
   max-width: 100%;
   overflow: overlay;
+  position: absolute;
 }
 
 ::-webkit-scrollbar {
